--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.ugandavrc.toon-shader",
   "displayName": "Legoman99573 Toon Shader",
-  "version": "1.6.2",
+  "version": "master",
   "description": "Toon Shader for VRChat",
   "author": {
     "name": "Legoman99573",
